# agentu

./: .gitignore  CHANGELOG.md  FUNCTIONAL_DESIGN.md  ORCHESTRATION.md  README.md  memory.db  pyproject.toml
.agents/workflows/: version-bump.md
.github/workflows/: python-package.yml  test.yml
docs/: ENHANCEMENTS.md  index.html
docs/plans/: 2026-02-25-smart-caching-design.md  2026-02-26-smart-caching-plan.md
examples/: multi_agent_example.py  quickstart_orchestration.py  simple_agent.py
examples/01_basics/: code_mode.py  memory.py  multimodal.py  structured_output.py
examples/05_observe/: rationale_demo.py
examples/06_memory/: always_on_memory.py  workspace_agent.py
src/agentu/: __init__.py  agent.py  cache_semantic.py  cache_storage_backends.py  (+13 more)
src/agentu.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_agent.py  test_agent_skills.py  test_agents_md.py  test_auto_skills.py  test_builders.py  test_cache.py  test_cache_embeddings.py  test_cache_integration.py  test_cache_semantic.py  test_cache_storage.py  test_cache_sync.py  test_cache_tiered.py  test_checkpoint.py  test_codemode.py  test_config.py  test_context.py  test_eval.py  test_github_skills.py  test_guardrails.py  test_harness.py  test_hooks.py  test_mcp.py  test_mcp_extensions.py  test_mcp_stdio.py  test_memory_patterns.py  test_memory_semantic.py  test_memory_storage.py  test_middleware.py  test_middleware_notify.py  test_multi_turn.py  test_observe.py  test_orchestrator.py  test_otel.py  test_ralph.py  test_resume.py  test_safety.py  test_sandbox.py  test_schedule.py  test_search.py  (+11 more)
(+55 files in other folders)
