[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "agentu"
version = "1.14.0"
description = "A flexible Python package for creating AI agents with customizable tools"
readme = "README.md"
authors = [
    {name = "Hemanth HM", email = "hemanth.hm@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "agents", "openai", "llm", "tools", "cli"]
dependencies = [
    "aiohttp>=3.8.0",
    "duckduckgo-search>=4.1.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
]
redis = [
    "redis>=4.0.0",
]
cache-all = [
    "sentence-transformers>=2.2.0",
    "redis>=4.0.0",
]

[project.scripts]
agentu = "agentu.cli:main"

[project.urls]
"Homepage" = "https://github.com/hemanth/agentu"
"Bug Tracker" = "https://github.com/hemanth/agentu/issues"